# trackit

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2021-03-28-064603_create_bug/: down.sql  up.sql
migrations/2021-03-28-223558_create_user/: up.sql
src/: connection.rs  main.rs  schema.rs
src/domains/: auth.rs  database.rs  helpers.rs  mod.rs
src/domains/auth/: auth.rs  auth_controller.rs  auth_service.rs  dto.rs  mod.rs
src/domains/bug/: bug_controller.rs  bug_dto.rs  bug_model.rs  bug_repository.rs  bug_service.rs  mod.rs
src/domains/user/: mod.rs  user_controller.rs  user_dto.rs  user_model.rs  user_repository.rs  user_service.rs
