[package]
name = "trackit"
version = "0.1.0"
authors = ["connor <connormullett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_json = "1.0.64"
dotenv = "0.15.0"
diesel = { version = "1.4.6", features = ["postgres"] }
serde = { version = "1.0.125", features = ["derive"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
